# poker-bot-v2

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
poker_bot_v2/: db.py  main.py  medals.py  player.py  utils.py
